<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/content_provider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/content_provider"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/content_provider_label"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/filter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_provider"
            android:layout_marginRight="4dp"
            android:text="@string/filter"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_provider"
            android:layout_toRightOf="@id/filter_label"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/rows_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter"
            android:layout_marginRight="4dp"
            android:text="@string/rows"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter"
            android:layout_toRightOf="@id/rows_label"
            android:text="@string/dash" />
    </RelativeLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>